--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
         // გასწორებული ფოტოების ლინკები
         const photoUrls = [
-            'https://i.ibb.co/93CpKmS3/foto-1.png', 
-            'https://i.ibb.co/CpB7pPXY/Foto-2.png',
-            'https://i.ibb.co/7tFTC1Ly/Foto-3.png',
-            'https://i.ibb.co/5X7bZvVn/Foto-4.png'
+            'Foto_1.png', 
+            'Foto_2.png',
+            'Foto-3.png',
+            'Foto-4.png'
         ];
 
         function changeDigit(index, delta) {
@@ -152,4 +152,5 @@
         }
     </script>
 </body>
+
 </html>>
