--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
         // გასწორებული ფოტოების ლინკები
         const photoUrls = [
-            'Foto_1.png', 
-            'Foto_2.png',
-            'Foto-3.png',
-            'Foto-4.png'
+            'Foto_1.jpg', 
+            'Foto_2.jpg',
+            'Foto-3.jpg',
+            'Foto-4.jpg'
         ];
 
         function changeDigit(index, delta) {
@@ -154,3 +154,4 @@
 </body>
 
 </html>>
+
