--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         const photoUrls = [
             'Foto_1.jpg', 
             'Foto_2.jpg',
-            'Foto-3.jpg',
-            'Foto-4.jpg'
+            'Foto_3.jpg',
+            'Foto_4.jpg'
         ];
 
         function changeDigit(index, delta) {
@@ -154,4 +154,5 @@
 </body>
 
 </html>>
+
 
